ProyectoDeOtro/ARREJIN-MACIEL-SAN LORENZO/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> XML VERSION1 ENCODING RSS1 VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2
Rule 2     sigma -> XML VERSION2 RSS1 VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2
Rule 3     main -> TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2
Rule 4     main -> TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2
Rule 5     main -> TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2
Rule 6     main -> TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2
Rule 7     main -> TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2
Rule 8     main -> TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2
Rule 9     main -> TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2
Rule 10    main -> TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2
Rule 11    main -> LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2
Rule 12    main -> LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2
Rule 13    main -> LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2
Rule 14    main -> LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2
Rule 15    main -> LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2
Rule 16    main -> LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2
Rule 17    main -> LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2
Rule 18    main -> LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2
Rule 19    main -> DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2
Rule 20    main -> DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2
Rule 21    main -> DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2
Rule 22    main -> DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2
Rule 23    main -> DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2
Rule 24    main -> DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2
Rule 25    main -> DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2
Rule 26    main -> DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2
Rule 27    main -> CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2
Rule 28    main -> CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2
Rule 29    main -> CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2
Rule 30    main -> CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2
Rule 31    main -> CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2
Rule 32    main -> CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2
Rule 33    tn -> TEXT
Rule 34    tn -> NUMERO TEXT
Rule 35    cuerpo -> item
Rule 36    cuerpo -> copyright item
Rule 37    cuerpo -> image item
Rule 38    cuerpo -> item image
Rule 39    cuerpo -> copyright image item
Rule 40    cuerpo -> copyright item image
Rule 41    cuerpo -> image copyright item
Rule 42    cuerpo -> image item copyright
Rule 43    cuerpo -> item image copyright
Rule 44    cuerpo -> item copyright image
Rule 45    item -> ITEM1 main ITEM2
Rule 46    item -> ITEM1 main ITEM2 item
Rule 47    copyright -> COPYRIGHT1 tn COPYRIGHT2
Rule 48    image -> IMAGE1 URL1 TOKENURL URL2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 wh IMAGE2
Rule 49    image -> IMAGE1 URL1 TOKENURL URL2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 wh IMAGE2
Rule 50    image -> IMAGE1 TITLE1 tn TITLE2 URL1 TOKENURL URL2 LINK1 TOKENURL LINK2 wh IMAGE2
Rule 51    image -> IMAGE1 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 URL1 TOKENURL URL2 wh IMAGE2
Rule 52    image -> IMAGE1 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 URL1 TOKENURL URL2 wh IMAGE2
Rule 53    image -> IMAGE1 LINK1 TOKENURL LINK2 URL1 TOKENURL URL2 TITLE1 tn TITLE2 wh IMAGE2
Rule 54    image -> IMAGE1 URL1 TOKENURL URL2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 IMAGE2
Rule 55    image -> IMAGE1 URL1 TOKENURL URL2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 IMAGE2
Rule 56    image -> IMAGE1 TITLE1 tn TITLE2 URL1 TOKENURL URL2 LINK1 TOKENURL LINK2 IMAGE2
Rule 57    image -> IMAGE1 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 URL1 TOKENURL URL2 IMAGE2
Rule 58    image -> IMAGE1 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 URL1 TOKENURL URL2 IMAGE2
Rule 59    image -> IMAGE1 LINK1 TOKENURL LINK2 URL1 TOKENURL URL2 TITLE1 tn TITLE2 IMAGE2
Rule 60    wh -> HEIGHT1 NUMERO HEIGHT2
Rule 61    wh -> WIDTH1 NUMERO WIDTH2
Rule 62    wh -> HEIGHT1 NUMERO HEIGHT2 WIDTH1 NUMERO WIDTH2
Rule 63    wh -> WIDTH1 NUMERO WIDTH2 HEIGHT1 NUMERO HEIGHT2

Terminals, with rules where they appear

CATEGORY1            : 5 6 7 8 9 10 13 14 15 16 17 18 21 22 23 24 25 26 27 28 29 30 31 32
CATEGORY2            : 5 6 7 8 9 10 13 14 15 16 17 18 21 22 23 24 25 26 27 28 29 30 31 32
CHANNEL1             : 1 2
CHANNEL2             : 1 2
COPYRIGHT1           : 47
COPYRIGHT2           : 47
DESCRIPTION1         : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
DESCRIPTION2         : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
ENCODING             : 1
HEIGHT1              : 60 62 63
HEIGHT2              : 60 62 63
IMAGE1               : 48 49 50 51 52 53 54 55 56 57 58 59
IMAGE2               : 48 49 50 51 52 53 54 55 56 57 58 59
ITEM1                : 45 46
ITEM2                : 45 46
LINK1                : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 48 49 50 51 52 53 54 55 56 57 58 59
LINK2                : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 48 49 50 51 52 53 54 55 56 57 58 59
NUMERO               : 34 60 61 62 62 63 63
RSS1                 : 1 2
RSS2                 : 1 2
TEXT                 : 33 34
TITLE1               : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 48 49 50 51 52 53 54 55 56 57 58 59
TITLE2               : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 48 49 50 51 52 53 54 55 56 57 58 59
TOKENURL             : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59
URL1                 : 48 49 50 51 52 53 54 55 56 57 58 59
URL2                 : 48 49 50 51 52 53 54 55 56 57 58 59
VERSION1             : 1
VERSION2             : 1 2 2
WIDTH1               : 61 62 63
WIDTH2               : 61 62 63
XML                  : 1 2
error                : 

Nonterminals, with rules where they appear

copyright            : 36 39 40 41 42 43 44
cuerpo               : 1 2
image                : 37 38 39 40 41 42 43 44
item                 : 35 36 37 38 39 40 41 42 43 44 46
main                 : 1 2 45 46
sigma                : 0
tn                   : 3 3 4 4 5 5 5 6 6 6 7 7 7 8 8 8 9 9 9 10 10 10 11 11 12 12 13 13 13 14 14 14 15 15 15 16 16 16 17 17 17 18 18 18 19 19 20 20 21 21 21 22 22 22 23 23 23 24 24 24 25 25 25 26 26 26 27 27 27 28 28 28 29 29 29 30 30 30 31 31 31 32 32 32 47 48 49 50 51 52 53 54 55 56 57 58 59
wh                   : 48 49 50 51 52 53

Parsing method: LALR

state 0

    (0) S' -> . sigma
    (1) sigma -> . XML VERSION1 ENCODING RSS1 VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2
    (2) sigma -> . XML VERSION2 RSS1 VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2

    XML             shift and go to state 2

    sigma                          shift and go to state 1

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> XML . VERSION1 ENCODING RSS1 VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2
    (2) sigma -> XML . VERSION2 RSS1 VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2

    VERSION1        shift and go to state 3
    VERSION2        shift and go to state 4


state 3

    (1) sigma -> XML VERSION1 . ENCODING RSS1 VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2

    ENCODING        shift and go to state 5


state 4

    (2) sigma -> XML VERSION2 . RSS1 VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2

    RSS1            shift and go to state 6


state 5

    (1) sigma -> XML VERSION1 ENCODING . RSS1 VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2

    RSS1            shift and go to state 7


state 6

    (2) sigma -> XML VERSION2 RSS1 . VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2

    VERSION2        shift and go to state 8


state 7

    (1) sigma -> XML VERSION1 ENCODING RSS1 . VERSION2 CHANNEL1 main cuerpo CHANNEL2 RSS2

    VERSION2        shift and go to state 9


state 8

    (2) sigma -> XML VERSION2 RSS1 VERSION2 . CHANNEL1 main cuerpo CHANNEL2 RSS2

    CHANNEL1        shift and go to state 10


state 9

    (1) sigma -> XML VERSION1 ENCODING RSS1 VERSION2 . CHANNEL1 main cuerpo CHANNEL2 RSS2

    CHANNEL1        shift and go to state 11


state 10

    (2) sigma -> XML VERSION2 RSS1 VERSION2 CHANNEL1 . main cuerpo CHANNEL2 RSS2
    (3) main -> . TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2
    (4) main -> . TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2
    (5) main -> . TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2
    (6) main -> . TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2
    (7) main -> . TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2
    (8) main -> . TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2
    (9) main -> . TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2
    (10) main -> . TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2
    (11) main -> . LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2
    (12) main -> . LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2
    (13) main -> . LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2
    (14) main -> . LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2
    (15) main -> . LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2
    (16) main -> . LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2
    (17) main -> . LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2
    (18) main -> . LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2 DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2
    (19) main -> . DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2
    (20) main -> . DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2
    (21) main -> . DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2
    (22) main -> . DESCRIPTION1 tn DESCRIPTION2 TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2
    (23) main -> . DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 CATEGORY1 tn CATEGORY2
    (24) main -> . DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2 CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2
    (25) main -> . DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2
    (26) main -> . DESCRIPTION1 tn DESCRIPTION2 CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2
    (27) main -> . CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2 LINK1 TOKENURL LINK2 DESCRIPTION1 tn DESCRIPTION2
    (28) main -> . CATEGORY1 tn CATEGORY2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2 LINK1 TOKENURL LINK2
    (29) main -> . CATEGORY1 tn CATEGORY2 LINK1 TOKENURL LINK2 TITLE1 tn TITLE2 DESCRIPTION1 tn DESCRIPTION2
